--- a/styles.css
+++ b/styles.css
@@ -343,8 +343,12 @@ h2 {
     border-radius: 5px;
     padding: .5rem;
     cursor: pointer;
-    text-decoration: none;
 }   
+
+.backlink {
+    text-decoration: none;
+    color:#333;
+}
 
 /* Venmo Container */
 
